# obradoriq

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT_FRAMEWORK.md  Agent_Architecture_One_Pager.md  Dockerfile  ObradorIQ_Presentation.pptx  README.md  TECH_SPEC.md  agents.md  docker-compose.yml  memory.md  render.yaml  soul.md  todo.md  tools.md
backend/: pyproject.toml
backend/app/: generate_data.py  main.py  seed.py  service.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  security.py
backend/app/data_hub/: calendar.py  ingest.py  weather.py
backend/app/llm/: agents.py  orchestrator.py  router.py  tools.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/recommender/: backtest.py  forecast.py  intraday.py  intraday_backtest.py  newsvendor.py  production.py  reallocation.py  signals.py  types.py
backend/app/schemas/: schemas.py
backend/app/trust/: layer.py
backend/tests/: conftest.py  test_admin.py  test_agent.py  test_api.py  test_backtest.py  test_e2e_smoke.py  test_generate_data.py  test_integration.py  test_intraday.py  test_intraday_api.py  test_intraday_backtest.py  test_intraday_seed.py  test_newsvendor.py  test_recommender.py  test_trust_and_agents.py
data/: generate_fixture.py  products.csv  sales.csv  sites.csv  waste.csv
docs/: ACTION_PLAN.md  DEMO_FLOW.md  ONE_PAGER.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
memory/: MEMORY.md  feedback_memory_workflow.md  lessons.md  project_agent_framework.md  (+4 more)
(+16 files in other folders)
